--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-include: [".well-known", ".nojekyll"]
+title: Hacker theme
+description: Hacker is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-hacker
