--- a/_data/data.yml
+++ b/_data/data.yml
@@ -7,66 +7,57 @@ sidebar:
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Alan Doe
-    tagline: Full Stack Developer
+    name: Muhammad Bilal Tahir
+    tagline: Software Engineer
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: hello@webjeda.com
-    phone: 012 345 6789
-    website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
-    github: sharu725
+    email: bilaltahir3636@gmail.com
+    phone: +92 345 8181333
+    website: billztee7.github.io #do not add http://
+    linkedin: billztee7
+    github: billztee7
     gitlab:
     bitbucket:
-    twitter: '@webjeda'
+    twitter: '@billztee7'
     stack-overflow: # Number/Username, e.g. 123456/alandoe
     codewars:
     goodreads: # Number-Username, e.g. 123456-alandoe
 
     languages:
       - idiom: English
+        level: Professional
+
+      - idiom: Urdu
         level: Native
 
-      - idiom: French
-        level: Professional
-
-      - idiom: Spanish
-        level: Professional
-
     interests:
-      - item: Climbing
+      - item: Internet Browsing
         link:
 
-      - item: Snowboarding
+      - item: Book Reading
         link:
 
-      - item: Cooking
+      - item: Coding
+        link:
+        
+      - item: Coding
         link:
 
 career-profile:
     title: Career Profile
     summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-      Second paragraph if required.
+      Proactive and personable job seeker currently pursuing a Bachelor's of 
+      Computer Science at FAST-NUCES. Excellent written and oral communication
+      skills. I believe my enthusiasm and specialized experience would make me
+      an asset to your team.
 education:
-    - degree: MSc in Computer Science
-      university: University of London
-      time: 2011 - 2012
-      details: |
-        Describe your study here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-        sociis natoque penatibus et magnis dis parturient montes, nascetur
-        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-        pretium quis, sem.
-          - Bullet point
-          - Bullet point
-    - degree: BSc in Applied Mathematics
-      university: Bristol University
+    - degree: BSc in Computer Science
+      university: FAST - National University of Computer and Emerging Sciences 
+      time: 2017 - 2021
+      details: 
+    - degree: FSc Pre - Engineering
+      university: PST Post Graduate College
       time: 2007 - 2011
       details: |
         Describe your study here lorem ipsum dolor sit amet, consectetuer
@@ -186,4 +177,4 @@ skills:
         level: 60%
 
 footer: >
-    Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
+    Designed with <i class="fas fa-heart"></i> by <a href="https://github.com/billztee7" target="_blank" rel="nofollow">Muhammad Bilal Tahir</a>
