--- a/_data/data.yml
+++ b/_data/data.yml
@@ -19,8 +19,8 @@ sidebar:
     github: billztee7
     gitlab:
     bitbucket:
-    twitter: '@billztee7'
-    stack-overflow: # Number/Username, e.g. 123456/alandoe
+    twitter: billztee7
+    stack-overflow: 8597364/muhammad-bilal-tahir # Number/Username, e.g. 123456/alandoe
     codewars:
     goodreads: # Number-Username, e.g. 123456-alandoe
 
