--- a/_data/data.yml
+++ b/_data/data.yml
@@ -119,4 +119,4 @@ skills:
         level: 60%
 
 footer: >
-    Designed with <a href="piano.html"><i class="fas fa-heart"></i></a> by <a href="https://github.com/billztee7" target="_blank" rel="nofollow">Muhammad Bilal Tahir</a>
+    Designed with <i class="fas fa-heart"></i> by <a href="https://github.com/billztee7" target="_blank" rel="nofollow">Muhammad Bilal Tahir</a>
