--- a/_data/data.yml
+++ b/_data/data.yml
@@ -14,7 +14,7 @@ sidebar:
     # Sidebar links
     email: bilaltahir3636@gmail.com
     phone: +92 345 8181333
-    website: billztee7.github.io #do not add http://
+    website: bluemath.xyz #do not add http://
     linkedin: billztee7
     github: billztee7
     gitlab:
